<resources>
    <string name="app_name">Fastest Finger</string>
    <string name="score"><![CDATA[SCORE : 0]]></string>
    <string name="new_game">New Game</string>
    <string name="level">Level</string>
    <string name="high_score">High Score</string>
    <string name="exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="ads">Ads</string>
    <string name="music">Music</string>
    <string name="rules">Rules</string>
    <string name="share">Share</string>
    <string name="send_to">Send To</string>
    <string name="OtherApps">Other Apps</string>
</resources>